--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.3.1",
     "googleapis": "^132.0.0",
     "node-fetch": "^3.3.2",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "@google-cloud/speech": "^5.3.0"
   }
 }
